# cyber-nexus-

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  requirements-runtime.txt  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  fleet-publish.yml  fleet-test.yml  nexus-scan-example.yml  release.yml
cloudflare/: .dev.vars.example  .gitignore  README.md  admin_app.py  gen.py  package-lock.json  package.json  schema.sql  wrangler.toml
cloudflare/src/: worker.js
docs/: IP-PROTECTION.md  PRODUCT-BRIEF.md
firebase/: .firebaserc  .gitignore  README.md  firebase.json  firestore.indexes.json  firestore.rules
firebase/admin/: nexus_codes.py
firebase/functions/: _ed25519.py  entitlement.py  main.py  requirements.txt
nexus-agent/: Cargo.toml
nexus-agent/src/: main.rs
python/: CUsersCHANAppDataLocalTempsslyze_out.json  runner.py  waf_server.py
python-runtime/: PLACEHOLDER.txt
python/core/: __init__.py  dbpath.py  dependency_checker.py  desktop_license.py  fleet_common.py  installer.py  license_config.py  official_installer.py  sanitizer.py  scope_guard.py  stream_handler.py  subprocess_runner.py  wsl_backend.py
python/fleet/: .npmignore  ARCHITECTURE.md  LICENSE  README.md  package.json  pyproject.toml  validate.ps1  validate_agent.ps1
python/fleet/deploy/systemd/: nexus-agent.service  nexus-manager.service
python/fleet/deploy/windows/: install-agent-service.ps1
python/fleet/nexus_agent/: __init__.py  __main__.py  agent.py  collectors.py
python/fleet/nexus_cli/: __init__.py  __main__.py  admin.py  menu.py  nexus.py
python/fleet/nexus_common/: __init__.py  cryptobox.py  device.py  license.py  log.py  notify.py  protocol.py  schema.py  vendor_public.key
python/fleet/nexus_dashboard/: __init__.py  app.js  help.js  i18n.js  icons.js  index.html  server.py  style.css
python/fleet/nexus_license/: __init__.py  __main__.py
python/fleet/nexus_manager/: __init__.py  __main__.py  rules.py  server.py  sigma.py  vulndb.py
python/fleet/nexus_secops/: __init__.py  ai.py  atlas.py  aware.py  canary.py  cloud.py  comply.py  correlate.py  edge.py  edr.py  ndr.py  packs.py  siem.py  soar.py  threatintel.py  ueba.py
python/modules/: __init__.py  api_tester.py  asset_inventory.py  attack_simulation.py  cloud_checker.py  container_scanner.py  defense_monitor.py  dir_fuzz.py  dns_recon.py  exploit_lookup.py  firewall_advisor.py  fleet_agent.py  fleet_manager.py  hash_tool.py  human_element.py  ids_monitor.py  listener.py  log_analyzer.py  network_mapper.py  network_scanner.py  password_auditor.py  patch_advisor.py  port_scanner.py  sbom.py  scan_diff.py  scheduler.py  secops.py  security_score.py  ssl_auditor.py  vhosts_local.json  vuln_scanner.py  waf.py  wireless_auditor.py  wordlist_manager.py
python/nexus_tools/: README.md  __init__.py  __main__.py  cli.py
python/parsers/: __init__.py  hydra_parser.py  nikto_parser.py  nmap_parser.py  tshark_parser.py
python/report/: __init__.py  generator.py
python/reports/: nexus_report_executive_20260614_161203.html
python/tests/: test_ai.py  test_atlas.py  test_aware.py  test_canary.py  test_cloud.py  test_comply.py  test_correlate.py  test_desktop_tools.py  test_edr.py  test_fleet.py  test_ndr.py  test_parsers.py  test_premium_gate.py  test_replay_airgap.py  test_sbom.py  test_scope_guard.py  test_secops.py  test_soar.py  test_threatintel.py  test_ueba.py  test_waf.py
scripts/: apply_copyright.py  install-agent.sh  prepare-python-runtime.ps1
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: dependency.rs  ebpf.rs  executor.rs  mod.rs  monitor.rs  nexus_listener.rs  pty.rs  report.rs  scanner.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: mod.rs  scan_result.rs
src/app/: App.tsx  router.tsx
src/components/: DependencyCard.tsx  InstallModal.tsx  Layout.tsx  LicenseSection.tsx  ModuleScaffold.tsx  ProGate.tsx  ResultTable.tsx  ScanConsole.tsx  Select.tsx  SeverityBadge.tsx  Sidebar.tsx  StatusBadge.tsx  Terminal.tsx  Toast.tsx  TopologyMap.tsx
src/lib/: icons.tsx  license.ts  output.ts  parser.ts  proModules.ts  security.ts  solar-subset.json  tauri.ts  theme.ts  updater.ts  (+1 more)
tools/: README.md  keygen_app.py
wordlists/: common_dirs.txt  rockyou.txt  subdomains.txt
(+67 files in other folders)
